[package]
name = "cita_cloud_proto"
version = "6.7.3"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
edition = "2021"
license = "Apache-2.0"
description = "cita-cloud proto library"


[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.36", default-features = false, features = ["macros"] }
thiserror = "1.0"
http = "0.2"
futures-retry = "0.6"
backoff = "0.4"
async-trait = "0.1"
tracing = "0.1"
tracing-opentelemetry = "0.22"
opentelemetry = "0.21"

[build-dependencies]
tonic-build = { version = "0.11", optional = true }
