[package]
name = "cita_cloud_proto"
version = "6.7.4"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
edition = "2021"
license = "Apache-2.0"
description = "cita-cloud proto library"


[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1.41", default-features = false, features = ["macros"] }
thiserror = "2.0"
http = "1.1"
futures-retry = "0.6"
backoff = "0.4"
async-trait = "0.1"
tracing = "0.1"
tracing-opentelemetry = "0.27"
opentelemetry = "0.26"

[build-dependencies]
tonic-build = { version = "0.12", optional = true }
