[package]
name = "cloud-util"
version = "0.6.0"
authors = ["ypf <yuitta@163.com>", "Rivtower Technologies <contact@rivtower.com>"]
edition = "2021"
license = "Apache-2.0"
description = "cita-cloud utility library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11"
tokio = "1.25"
toml = "0.7"
tonic = "0.8"
tower = "0.4"
futures = "0.3"
hyper = { version = "0.14", features = ["full"] }
prometheus = "0.13"
lazy_static = "1.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.18"
tracing-appender = "0.2"
opentelemetry = { version = "0.18", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.17", features = ["rt-tokio"] }
serde = { version = "1.0", features = ["derive"] }

cita_cloud_proto = { path = "../cloud-proto" }

[target.'cfg(not(windows))'.dependencies]
signal-hook = { version = "0.3" }
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }


[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
criterion = "0.4"

[[bench]]
name = "wal"
harness = false
