[package]
name = "cloud-util"
version = "0.8.1"
authors = ["ypf <yuitta@163.com>", "Rivtower Technologies <contact@rivtower.com>"]
edition = "2021"
license = "Apache-2.0"
description = "cita-cloud utility library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12"
tokio = { version = "1.36", default-features = false, features = ["fs", "rt-multi-thread"] }
toml = "0.8"
tonic = "0.11"
tower = "0.4"
futures = "0.3"
hyper = { version = "0.14", features = ["full"] }
prometheus = "0.13"
lazy_static = "1.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }
tracing-opentelemetry = "0.22"
tracing-appender = "0.2"
opentelemetry = { version = "0.21" }
opentelemetry-jaeger = { version = "0.20", features = ["rt-tokio"] }
opentelemetry-http = { version = "0.10", features = ["hyper", "tokio"] }
opentelemetry_sdk = { version = "0.21", features = ["jaeger_remote_sampler"] }
serde = { version = "1.0", features = ["derive"] }
time = "0.3"
chrono = "0.4"
backtrace = "0.3"
flume = "0.11"

cita_cloud_proto = { path = "../cloud-proto", version = "=6.7.3" }

[target.'cfg(not(windows))'.dependencies]
signal-hook = { version = "0.3" }
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }


[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
criterion = "0.5"

[[bench]]
name = "wal"
harness = false
