[package]
name = "cloud-util"
version = "0.8.2"
authors = [
    "ypf <yuitta@163.com>",
    "Rivtower Technologies <contact@rivtower.com>",
]
edition = "2021"
license = "Apache-2.0"
description = "cita-cloud utility library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
axum = "0.7"
prost = "0.13"
tokio = { version = "1.38", default-features = false, features = [
    "fs",
    "rt-multi-thread",
] }
toml = "0.8"
tonic = "0.12"
tower = "0.4"
futures = "0.3"
hyper = { version = "1.4", features = ["full"] }
prometheus = "0.13.4"
lazy_static = "1.5"
reqwest = "0.11" # for opentelemetry-http
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "local-time",
] }
tracing-opentelemetry = "0.24"
tracing-appender = "0.2"
opentelemetry = { version = "0.23" }
opentelemetry-otlp = { version = "0.16", features = ["tokio"] }
opentelemetry-http = { version = "0.12", features = ["reqwest", "tokio"] }
opentelemetry_sdk = { version = "0.23", features = [
    "jaeger_remote_sampler",
    "rt-tokio",
] }
serde = { version = "1.0", features = ["derive"] }
time = "0.3"
chrono = "0.4"
backtrace = "0.3"
flume = "0.11"

cita_cloud_proto = { path = "../cloud-proto", version = "=6.7.4" }

[target.'cfg(not(windows))'.dependencies]
signal-hook = { version = "0.3" }
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }


[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
criterion = "0.5"
